--- a/views/bars/edit.ejs
+++ b/views/bars/edit.ejs
@@ -3,14 +3,14 @@
     <div class="row">
         <h1 class="text-center">Edit Bar Information</h1>
         <div class="col-6 offset-3">
-            <form action="/bars/<%=bar._id%>?_method=PUT" method="POST">
+            <form action="/bars/<%=bar._id%>?_method=PUT" method="POST" novalidate class="validatedForm">
                 <div class="mb-3">
                     <label for="name" class ="form-label">Name of Bar</label>
-                    <input type="text" class="form-control" name="bars[name]" id="name" value = "<%=bar.name%>">
+                    <input type="text" class="form-control" name="bars[name]" id="name" value = "<%=bar.name%>" required>
                 </div>
                 <div class="mb-3">
                     <label for="location" class ="form-label">Displayed Address</label>
-                    <input type="text" class="form-control" name="bars[location.display_address]" id="location" value ="<%=bar.location.display_address%>">
+                    <input type="text" class="form-control" name="bars[location.display_address]" id="location" value ="<%=bar.location.display_address%>"required>
                 </div>
                 <div class="input-group">
                     <span class="input-group-text">Address Details</span>
@@ -25,7 +25,7 @@
                     <label for="price" class ="form-label">Price Range </label>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="addon-wrapping">$</span>
-                    <input type="text" class="form-control" value ='<%=bar.price%>' name="bars[price]" id="price" placeholder="from $ to $$$$" aria-describedby="addon-wrapping">
+                    <input type="text" class="form-control" value ='<%=bar.price%>' name="bars[price]" id="price" placeholder="from $ to $$$$" aria-describedby="addon-wrapping"required>
                 </div>
                 <div class ="mb-3">
                     <label for="is_closed" class="form-label">Status of Business</label>
