--- a/views/bars/new.ejs
+++ b/views/bars/new.ejs
@@ -2,14 +2,17 @@
     <div class="row">
         <h1 class="text-center">Upload New Listing</h1>
         <div class="col-6 offset-3">
-            <form action="/bars" method="POST">
+            <form action="/bars" method="POST" novalidate class="validatedForm">
                 <div class="mb-3">
                     <label for="name" class ="form-label">Name of Bar</label>
-                    <input type="text" class="form-control" name="bars[name]" id="name">
+                    <input type="text" class="form-control" name="bars[name]" id="name" required>
                 </div>
                 <div class="mb-3">
                     <label for="location" class ="form-label">Displayed Address</label>
-                    <input type="text" class="form-control" name="bars[location.display_address]" id="location">
+                    <input type="text" class="form-control" name="bars[location.display_address]" id="location" required>
+                    <div class="valid-feedback">
+                        Looks Good
+                    </div>
                 </div>
                 <div class="input-group">
                     <span class="input-group-text">Address Details</span>
@@ -25,7 +28,7 @@
                 
                 <div class="input-group">
                     <span class="input-group-text" id="addon-wrapping">$</span>
-                    <input type="text" class="form-control" name="bars[price]" id="price" placeholder="from $ to $$$$" aria-describedby="addon-wrapping">
+                    <input type="text" class="form-control" name="bars[price]" id="price" placeholder="from $ to $$$$" aria-describedby="addon-wrapping" required>
                 </div>
             </div>
                 <button class="btn btn-primary mt-5">Add New Bar</button>
@@ -35,3 +38,5 @@
             </p>
         </div>
     </div>
+
+
