--- a/views/bars/edit.ejs
+++ b/views/bars/edit.ejs
@@ -12,14 +12,22 @@
                     <label for="location" class ="form-label">Displayed Address</label>
                     <input type="text" class="form-control" name="bars[location.display_address]" id="location" value ="<%=bar.location.display_address%>"required>
                 </div>
-                <div class="input-group">
+                <div class="mb-3">
+                    <label for="zip_code" class ="form-label">Postal Code</label>
+                    <input type="text" class="form-control" name="bars[location.zip_code]" id="zip_code" value ="<%=bar.location.zip_code%>"required>
+                </div>
+                <!-- <div class="input-group">
                     <span class="input-group-text">Address Details</span>
                     <input type="text" name="bars[location.address1]" class="form-control" placeholder="Street Address"value ="<%=bar.location.address1%>">
                     <input type="text" name="bars[location.zip_code]" class="form-control" placeholder="Postal code"value ="<%=bar.location.zip_code%>">
-                  </div>
+                  </div> -->
                   <div class="mb-3 mt-2">
                     <label for="image_url" class ="form-label">Image URL</label>
                     <input type="text" class="form-control" name="bars[image_url]" id="image_url" value="<%=bar.image_url%>">
+                </div>
+                  <div class="mb-3 mt-2">
+                    <label for="image_url" class ="form-label">URL (if available)</label>
+                    <input type="text" class="form-control" name="bars[url]" id="image_url" value="<%=bar.url%>">
                 </div>
                 <div>
                     <label for="price" class ="form-label">Price Range </label>
