--- a/views/bars/new.ejs
+++ b/views/bars/new.ejs
@@ -9,19 +9,26 @@
                 </div>
                 <div class="mb-3">
                     <label for="location" class ="form-label">Displayed Address</label>
-                    <input type="text" class="form-control" name="bars[location.display_address]" id="location" required>
+                    <input type="text" class="form-control" name="bars[location][display_address]" id="location" required>
                     <div class="valid-feedback">
                         Looks Good
                     </div>
                 </div>
-                <div class="input-group">
-                    <span class="input-group-text">Address Details</span>
-                    <input type="text" name="bars[location.address1]" class="form-control" placeholder="Street Address">
-                    <input type="text" name="bars[location.zip_code]" class="form-control" placeholder="Postal code">
-                  </div>
+                <div class="mb-3">
+                    <label for="zip_code" class ="form-label">Postal Code</label>
+                    <input type="text" class="form-control" name="bars[location.zip_code]" id="zip_code" required>
+                    <div class="valid-feedback">
+                        Looks Good
+                    </div>
+                </div>
+                
                   <div class="mb-3 mt-2">
                     <label for="image_url" class ="form-label">Image URL</label>
                     <input type="text" class="form-control" name="bars[image_url]" id="image_url">
+                </div>
+                <div class="mb-3">
+                    <label for="url" class ="form-label">Link to Site or Menu if available</label>
+                    <input type="text" class="form-control" name="bars[url]" id="url" >
                 </div>
                 <div>
                     <label for="price" class ="form-label">Price Range </label>
