tidy up code with routing scripts and error handling flash

--- a/views/bars/show.ejs
+++ b/views/bars/show.ejs
@@ -81,7 +81,7 @@
             <div class="card-body">
               <h5 class="card-title">Rating: <%=review.rating%></h5>
               <p><%=review.body%></p>
-              <form action="/bars/<%=bar._id%>/reviews/<%=review._id%>?_method=DELETE" method ="POST">
+              <form action="/bars/<%=bar._id%>/review/<%=review._id%>?_method=DELETE" method ="POST">
               <button class ="btn btn-danger btn-sm">Delete</button></form>
             </div>
           </div>
