added stars feature and tidied up code routes

--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -9,7 +9,9 @@
       rel="stylesheet"
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
+      
     />
+    <link rel="stylesheet" href="/css/stars.css">
   </head>
   <body class="d-flex flex-column vh-100">
     <%-include('../partials/navbar')%>
