--- a/views/bars/show.ejs
+++ b/views/bars/show.ejs
@@ -1,4 +1,5 @@
 <% layout('layouts/boilerplate')%>
+<!-- <link rel="stylesheet" href="/css/stars.css"> -->
 
 <div class="row">
   <div class="col-6">
@@ -52,25 +53,30 @@
           novalidate
           class="validatedForm"
         >
-          <div class="mb-3">
+          <div class="">
             <label class="form-label" for="rating">Rating</label>
-            <input
-              class="form-range"
-              type="range"
-              name="review[rating]"
-              id="rating"
-              min="0"
-              max="5"
-            />
-          </div>
+            <fieldset class="starability-heart">
+              <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
+              <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+              <label for="first-rate1" title="Terrible">1 star</label>
+              <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+              <label for="first-rate2" title="Not good">2 stars</label>
+              <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+              <label for="first-rate3" title="Average">3 stars</label>
+              <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+              <label for="first-rate4" title="Very good">4 stars</label>
+              <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+              <label for="first-rate5" title="Amazing">5 stars</label>
+            </fieldset>
+          </div> 
           <div class="mb-3">
-            <label class="form-label" for="review">Review</label>
+            <label class="form-label" for="review">Review Description</label>
             <textarea
               class="form-control"
               name="review[body]"
               id="review"
               cols="30"
-              rows="4"
+              rows="5"
               required
             ></textarea>
             <div class="valid-feedback">Looks Good</div>
@@ -81,12 +87,14 @@
           <% for(let review of bar.reviews){%>
           <div class="card mb-3">
             <div class="card-body">
-              <h5 class="card-title">Rating: <%=review.rating%></h5>
+              <h5 class="card-title">Rating: <%=review.rating%> Stars</h5>
+              <p class="starability-result" data-rating="<%=review.rating%>"></p>
+              
               <h6 class="card-subtitle mb-2 text-muted">By <%=review.author.username%></h6>
               <p><%=review.body%></p>
               
               <form action="/bars/<%=bar._id%>/review/<%=review._id%>?_method=DELETE" method ="POST">
-              <button class ="btn btn-danger btn-sm">Delete</button></form>
+              <button class ="btn btn-danger btn-sm">Delete Review</button></form>
                
             </div>
           </div>
