--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -12,6 +12,7 @@
       
     />
     <link rel="stylesheet" href="/css/stars.css">
+    <link rel="stylesheet" href="/css/img.css">
   </head>
   <body class="d-flex flex-column vh-100">
     <%-include('../partials/navbar')%>
