--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,8 +1,7 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="/bars">
-      <!-- <img src="https://i.pinimg.com/564x/8d/6a/63/8d6a6394183e3069b665ea6c7f66a009.jpg" alt=" Img of bier" > -->
-      Logo
+      <img class ="logo" src="https://res.cloudinary.com/overcookedsushi/image/upload/v1613880164/where-chill/logo1_wiazjs.png" alt=" Img of bier" > 
     </a>
     <button
       class="navbar-toggler"
