--- a/views/bars/index.ejs
+++ b/views/bars/index.ejs
@@ -9,7 +9,8 @@
         <div class="row">
             <div class="col-md-4">
                 <a href="/bars/<%=bar._id%>">
-                <img class ="img-fluid" alt="<%=bar.name%> image" src ="<%=bar.images[0].url%>">
+                <img class ="img-thumbnail"
+                 alt="<%=bar.name%> image" src ="<%=bar.images[0].url%>">
                 </a>
             </div>
             <div class="col-md-8">
