fixed minor bugs, app in deployable state with url https://rocky-refuge-84633.herokuapp.com/

--- a/views/bars/index.ejs
+++ b/views/bars/index.ejs
@@ -30,6 +30,8 @@
         is Open for Business! <%}%>
       </p>
       <p class="card-text"><b>Address: </b><%=bar.location.display_address%></p>
+      <h5 class="card-text">Rating:</h5>
+      <p class="starability-result" data-rating="<%=Math.floor(bar.rating)%>"></p>
       <p class="card-text"><b>Rating: </b><%=bar.rating%>/5</p>
       <a href="/bars/<%=bar._id%>" class="btn btn-danger">View <%=bar.name%></a>
       <p class="card-text">
