--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,6 +1,7 @@
 <% layout('layouts/boilerplate')%>
-<script src="https://kit.fontawesome.com/2cc3661542.js" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/css/about.css">
+
+<script src="https://kit.fontawesome.com/2cc3661542.js" crossorigin="anonymous"></script>
 <div class="row">
   <h1 class="text-center">About- Where To Chill &#x1F37A</h1>  
   <div class="col-md-10 offset-md-1">
@@ -66,15 +67,16 @@
         <p class="card-text">Graduate from Nanyang Technological University specialized in Engineering and Management. Seeking opportunities in Software Development. Do drop me an e-mail below to contact me or for a resume.</p>
         <h5 class="card-title">My Sites</h5>
         <p class="card-text">
-          <a href="https://www.facebook.com/Overcookedsushi/" ><i class="fab fa-facebook-square fa-3x"></i>
+          <a href="https://www.facebook.com/Overcookedsushi/" ><i class="fab fa-facebook-square fa-3x"></i>fontawesome: facebook
           </a>
-        <a style="color: black" href="https://github.com/Sherman-Tay" ><i class="fab fa-github-square fa-3x"></i>
+        <a style="color: black" href="https://github.com/Sherman-Tay" ><i class="fab fa-github-square fa-3x"></i>fontawesome: github
           </a>
-        <a style="color:plum"href="https://www.instagram.com/overcookedsushi/?hl=en" ><i class="fab fa-instagram-square fa-3x"></i>
+        <a style="color:plum"href="https://www.instagram.com/overcookedsushi/?hl=en" ><i class="fab fa-instagram-square fa-3x"></i>fontawesome: instagram
           </a>
-        <a href="https://www.linkedin.com/in/tay-sherman/" ><i class="fab fa-linkedin fa-3x"></i>
-        <a style="color:orange" href="mailto:shermantayjunyang@gmail.com" ><i class="fab fa-google fa-3x"></i>
+        <a href="https://www.linkedin.com/in/tay-sherman/" ><i class="fab fa-linkedin fa-3x"></i>fontawesome: linkedin
+        <a style="color:orange" href="mailto:shermantayjunyang@gmail.com" ><i class="fab fa-google fa-3x"></i>fontawesome: email
           </a>
+          
         </p>
       </div>
     </div>
